# rusted-battle

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
assets/: README.md
assets/fonts/: .gitkeep
assets/sounds/: .gitkeep
assets/textures/: .gitkeep
src/: main.rs
src/core/: math.rs  mod.rs
src/engine/: game_loop.rs  mod.rs
src/engine/assets/: atlas.rs  handle.rs  hot_reload.rs  loader.rs  manager.rs  mod.rs
src/engine/input/: action.rs  buffer.rs  config.rs  manager.rs  mod.rs  player.rs
src/engine/physics/: body.rs  collision.rs  debug.rs  mod.rs  world.rs
src/engine/physics/shaders/: debug.wgsl
src/engine/renderer/: camera.rs  mod.rs  sprite.rs  texture.rs  vertex.rs
src/engine/renderer/shaders/: sprite.wgsl
src/game/: mod.rs
src/game/abilities/: mod.rs
src/game/arena/: mod.rs
src/game/characters/: animation.rs  character.rs  mod.rs  state.rs  stats.rs
src/game/ui/: mod.rs
